# test_task_3

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2025_06_01_0356-c7588e4469a7_.py
src/: db.py  main.py  services.py  settings.py  start.sh  utils.py
